# third_party_hw_drivers_extension

./: README.md  templates.xml  third_party_hw_drivers.slce  third_party_hw_drivers.slsdk
app/example/adafruit_neotrellis_keypad_atsamd09/: adafruit_neotrellis_keypad_atsamd09.slcp  app.c
app/example/adafruit_rgb_led_is31fl3741/: adafruit_rgb_led_is31fl3741.slcp  app.c
app/example/adafruit_tft_lcd_hxd8357d/: adafruit_tft_lcd_hxd8357d.slcp  adafruit_tft_lcd_hxd8357d_dma.slcp  app.c
app/example/adafruit_tft_lcd_hxd8357d_lvgl/: adafruit_tft_lcd_hxd8357d_lvgl.slcp  adafruit_tft_lcd_hxd8357d_lvgl_dma.slcp  app.c
app/example/adafruit_tft_lcd_hxd8357d_lvgl/app_ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
app/example/adafruit_tft_lcd_hxd8357d_lvgl/app_ui/components/: ui_comp_hook.c
app/example/adafruit_tft_lcd_hxd8357d_lvgl/app_ui/images/: ui_img_842152610.c  ui_img_buld_off_png.c  ui_img_buld_on_png.c  ui_img_button1_off_png.c  ui_img_button1_on_png.c
app/example/adafruit_tft_lcd_hxd8357d_lvgl/app_ui/screens/: ui_main.c
app/example/adafruit_tft_lcd_ili9341/: adafruit_tft_lcd_ili9341.slcp  adafruit_tft_lcd_ili9341_dma.slcp  app.c
app/example/adafruit_tft_lcd_ili9341_lvgl/: adafruit_tft_lcd_ili9341_lvgl.slcp  adafruit_tft_lcd_ili9341_lvgl_dma.slcp  app.c
app/example/adafruit_tft_lcd_st7789/: adafruit_tft_lcd_st7789.slcp  adafruit_tft_lcd_st7789_dma.slcp  app.c  bird_image.c  cat_image.c  (+3 more)
doc/: readme.md
driver/inc/: third_party_hw_drivers_helpers.h
utilities/postbuild_profile/: wiseconnect_soc.slpb
(+1081 files in other folders)
